src/main/java/com/example/project/_core/errors/exception/Exception600.java
package com.example.project._core.errors.exception;

import lombok.Getter;

// 서버 에러
@Getter
public class Exception600 extends RuntimeException {
    public Exception600(String message) {
        super(message);
    }

}